# life_transition

./: .gitignore  .zenodo.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  STRUCTURE.md  TECH.md  action-plan.md  pyproject.toml  unified-review.md
.github/workflows/: python-ci.yml  rust-ci.yml
configs/: semi_life_plasmid.json  semi_life_proto_organelle.json  semi_life_viroid.json  semi_life_virus.json
crates/digital-life-core/src/: config.rs  constants.rs  genome.rs  metabolism.rs  metrics.rs  organism.rs  (+4 more)
crates/life-transition-core/: Cargo.toml
crates/life-transition-py/: Cargo.toml
crates/life-transition-py/src/: lib.rs
crates/spike/: Cargo.toml
crates/spike/src/: main.rs
docs/: README.md  alife_submission_guide.md  artifact_publication_policy.md  zenodo_metadata.json
docs/archive/: action-plan.md  digital-life-project-overview.md  unified-review.md
docs/paper/: skeleton.md
docs/research/: artifact_publication_policy.md  ecological_differentiation_policy.md  final_graph_manifest_reference.json  functional-analogy-definition.md  preregistration.md  research-plan.md  result_manifest_bindings.json  zenodo_niche_long_horizon_metadata.json
experiments/: coupling_analysis.json  final_graph_statistics.json
paper/: Makefile  auto_macros.tex  main.tex  peer_review_A_on_2026-02-20.md  peer_review_B.md  peer_review_B_on_2026-02-20.md  references.bib  supplement.tex
python/digital_life/: __init__.py
python/life_transition/: __init__.py
scripts/: analyze_competition.py  analyze_coupling.py  analyze_evolution_evidence.py  analyze_orthogonal.py  analyze_pairwise.py  analyze_phenotype.py  analyze_results.py  analyze_semi_life_capability_ladder.py  analyze_semi_life_sensitivity.py  analyze_semi_life_shocks.py  analyze_v4_policy_evolution.py  check.sh  check_manuscript_consistency.py  experiment_1000step.py  experiment_common.py  experiment_cyclic.py  experiment_cyclic_sweep.py  experiment_ecology_stress.py  experiment_evolution.py  experiment_final.py  experiment_final_graph.py  experiment_graded.py  experiment_graph_calibration.py  experiment_invariance.py  experiment_manifest.py  experiment_midrun_ablation.py  experiment_niche.py  experiment_pairwise.py  experiment_proxy.py  experiment_regimes.py  experiment_semi_life_calibrate.py  experiment_semi_life_competition.py  experiment_semi_life_sensitivity.py  experiment_semi_life_shocks.py  experiment_semi_life_static.py  experiment_semi_life_v0.py  experiment_semi_life_v1_sweep.py  experiment_semi_life_v1v3.py  experiment_sham.py  experiment_spatial.py  (+8 more)
scripts/analyses/: __init__.py
scripts/figures/: __init__.py  _shared.py  fig_coupling.py  fig_cyclic.py  fig_evolution_evidence.py  fig_invariance.py  fig_midrun.py  fig_phenotype.py  fig_semi_life_internalization.py  fig_semi_life_phase_diagram.py  fig_semi_life_recovery.py  fig_semi_life_sensitivity.py  fig_semi_life_tradeoffs.py  fig_spatial.py  fig_trait_evolution.py
tests_python/: test_analysis_smoke.py  test_binding_contract.py  test_calibrate.py  test_competition.py  test_mean_energy_analysis.py  test_parallel_execution.py  test_phase_diagrams.py  test_post_merge_recommendations.py  test_v1v3.py  test_v4_policy.py
(+40 files in other folders)
