[workspace]
members = [
    "crates/life-transition-core",
    "crates/life-transition-py",
    "crates/spike",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
rstar = "0.12"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
