[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "digital-life"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24.0", "scipy>=1.11.0", "matplotlib>=3.7.0", "scikit-learn>=1.3.0"]

[tool.maturin]
manifest-path = "crates/digital-life-py/Cargo.toml"
python-source = "python"
module-name = "digital_life._core"
features = ["pyo3/extension-module"]
