[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "life-transition"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24.0", "scipy>=1.11.0", "matplotlib>=3.7.0", "scikit-learn>=1.3.0", "requests>=2.31.0"]

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.9.0"]

[tool.maturin]
manifest-path = "crates/life-transition-py/Cargo.toml"
python-source = "python"
module-name = "life_transition._core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Figure modules intentionally use `from figures._shared import *` to access
# shared constants (COLORS, LABELS, plt, FIG_DIR, …) without verbose explicit imports.
"scripts/figures/*.py" = ["F403", "F405"]
# figures/__init__.py must call matplotlib.use("Agg") and mkdir FIG_DIR before
# importing any figure submodule that imports pyplot — E402 is intentional here.
"scripts/figures/__init__.py" = ["E402", "F403", "F405"]
# experiment_utils.py fires a DeprecationWarning before re-exporting — E402 is intentional.
"scripts/experiment_utils.py" = ["E402"]

[tool.pytest.ini_options]
# "." exposes the top-level scripts package (from scripts/__init__.py).
# "scripts" exposes sub-packages (analyses/, figures/) as top-level imports,
# matching how the analysis scripts themselves run (scripts/ is their cwd).
pythonpath = [".", "scripts"]
