[package]
name = "life-transition-py"
version = "0.1.0"
edition.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
life-transition-core = { path = "../life-transition-core" }
pyo3.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
