[package]
name = "life-transition-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "life-transition"
path = "src/main.rs"

[dependencies]
life-transition-core = { path = "../life-transition-core" }
rand.workspace = true
rand_chacha.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
